--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "@ngx-translate/core": "^13.0.0",
     "dayjs": "^1.10.4",
     "material-design-icons-iconfont": "^6.0.1",
+    "ngx-mask": "^11.1.4",
     "rxjs": "^6.6.3",
     "tslib": "^2.0.1",
     "zone.js": "~0.10.3"
