--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "s",
+  "name": "ihealth_tcc_web",
   "version": "1.0.0",
   "private": true,
   "scripts": {
@@ -33,11 +33,13 @@
     "@angular/platform-browser-dynamic": "^10.1.4",
     "@angular/router": "^10.1.4",
     "@angular/service-worker": "^10.1.4",
+    "@ng-select/ng-select": "^5.1.0",
     "@ngx-translate/core": "^13.0.0",
     "dayjs": "^1.10.4",
     "material-design-icons-iconfont": "^6.0.1",
     "ngx-mask": "^11.1.4",
     "rxjs": "^6.6.3",
+    "sweetalert2": "^10.15.5",
     "tslib": "^2.0.1",
     "zone.js": "~0.10.3"
   },
