--- a/package.json
+++ b/package.json
@@ -35,8 +35,10 @@
     "@angular/service-worker": "^10.1.4",
     "@ng-select/ng-select": "^5.1.0",
     "@ngx-translate/core": "^13.0.0",
+    "apexcharts": "^3.8.0",
     "dayjs": "^1.10.4",
     "material-design-icons-iconfont": "^6.0.1",
+    "ng-apexcharts": "^1.5.8",
     "ngx-mask": "^11.1.4",
     "rxjs": "^6.6.3",
     "sweetalert2": "^10.15.5",
