--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "@angular/platform-browser-dynamic": "^10.1.4",
     "@angular/router": "^10.1.4",
     "@angular/service-worker": "^10.1.4",
+    "@iplab/ngx-file-upload": "^3.0.0",
     "@ng-select/ng-select": "^5.1.0",
     "@ngx-translate/core": "^13.0.0",
     "apexcharts": "^3.8.0",
