--- a/package.json
+++ b/package.json
@@ -38,8 +38,10 @@
     "@ngx-translate/core": "^13.0.0",
     "apexcharts": "^3.8.0",
     "dayjs": "^1.10.4",
+    "lottie-web": "^5.7.6",
     "material-design-icons-iconfont": "^6.0.1",
     "ng-apexcharts": "^1.5.8",
+    "ngx-lottie": "^6.4.0",
     "ngx-mask": "^11.1.4",
     "rxjs": "^6.6.3",
     "sweetalert2": "^10.15.5",
