--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "ng-apexcharts": "^1.5.8",
     "ngx-lottie": "^6.4.0",
     "ngx-mask": "^11.1.4",
+    "ngx-pagination": "^5.0.0",
     "rxjs": "^6.6.3",
     "sweetalert2": "^10.15.5",
     "tslib": "^2.0.1",
