--- a/package.json
+++ b/package.json
@@ -4,19 +4,19 @@
   "private": true,
   "scripts": {
     "ng": "ng",
-    "build": "npm run env -s && ng build --prod",
-    "start": "npm run env -s && ng serve",
+    "build": "ng build --prod",
+    "start": "node server.js",
+    "postinstall": "ng build --aot --prod",
+    "heroku-postbuild": "ng build --prod",
     "serve:sw": "npm run build -s && npx http-server ./dist -p 4200",
     "lint": "ng lint && stylelint \"src/**/*.scss\" --syntax scss && htmlhint \"src\" --config .htmlhintrc",
-    "test": "npm run env -s && ng test",
-    "test:ci": "npm run env -s && npm run lint -s && ng test --configuration=ci",
-    "e2e": "npm run env -s && ng e2e",
+    "test": "ng test",
+    "test:ci": "npm run lint -s && ng test --configuration=ci",
+    "e2e": "ng e2e",
     "translations:extract": "ngx-translate-extract --input ./src --output ./src/translations/template.json --format=json --clean --sort",
     "docs": "hads ./docs -o",
-    "env": "ngx-scripts env npm_package_version",
     "prettier": "prettier --write \"./{src,e2e}/**/*.{ts,js,html,scss}\"",
     "prettier:check": "prettier --list-different \"./{src,e2e}/**/*.{ts,js,html,scss}\"",
-    "postinstall": "npm run prettier -s",
     "generate": "ng generate"
   },
   "dependencies": {
@@ -45,6 +45,7 @@
     "@ngx-translate/core": "^13.0.0",
     "apexcharts": "^3.8.0",
     "dayjs": "^1.10.4",
+    "express": "^4.17.1",
     "lottie-web": "^5.7.6",
     "material-design-icons-iconfont": "^6.0.1",
     "ng-apexcharts": "^1.5.8",
